# CSPB_2270_Final_Project

./: .clang-format  .clang-tidy  .clangd  .gitignore  CITATIONS.md  CMakeLists.txt  Doxyfile  Makefile  README.md  compile_commands.json  mkdocs.yml  project_overview.txt  requirements.txt
.cache/clangd/index/: canvas.cpp.3052BA6B983F9F93.idx  canvas.h.FCA33D9665C430C2.idx  canvas_test.cpp.F3DCD8160659D153.idx  circle.cpp.671CAB8D91642B93.idx  circle.h.689915079D1FB40A.idx  circle_test.cpp.77E422C5116F2D20.idx  main.cpp.4ACE6C08C3BC773C.idx  main_test.cpp.6878FAEAAB2C10B9.idx  node.cpp.95401C2186F88E5F.idx  node.h.B8DECCC8D21CD8A6.idx  node_test.cpp.5868EEE9D71A353E.idx  rectangle.cpp.818991C53A8788DA.idx  rectangle.h.81864E260AF83582.idx  rectangle_test.cpp.6D14E289E6695965.idx  renderer.cpp.04A71FF96BA4029F.idx  renderer.h.F92E90BD6F1529CE.idx  renderer_test.cpp.512BB365B40BEBC9.idx  shader.cpp.D7C4B316B0B2B97F.idx  shader.h.A5DDB37C2E18D86F.idx  shape.cpp.72DE0A3AE8D2F426.idx  shape.h.E0BD5AE667B88C24.idx  shape_test.cpp.B52B783E7EB74784.idx  transform.cpp.D86DB23AEA7E5251.idx  transform.h.D956B1FC4FC6EC56.idx  transform_test.cpp.E44797F49D39488B.idx  tree_view.cpp.E923050E5BD4C0D7.idx  tree_view.h.E41671E7C4C5B877.idx  types.cpp.9AED5A0A550696F8.idx  types.h.F1CC79B3022B7F25.idx  types_test.cpp.427C6462B0D9102B.idx
include/: application.h  constants.h  types.h
include/scene_graph/: circle.h  node.h  rectangle.h  shape.h  transform.h  types.h
include/visualization/: canvas.h  font_manager.h  render_types.h  renderer.h  shader.h  shader_manager.h  shape_renderer.h  text_renderer.h  tree_view.h  window.h
media/: cars_moving.mov
src/: CMakeLists.txt  application.cpp  main.cpp  types.cpp
src/scene_graph/: circle.cpp  node.cpp  rectangle.cpp  shape.cpp  transform.cpp  types.cpp
src/visualization/: canvas.cpp  font_manager.cpp  render_types.cpp  renderer.cpp  shader.cpp  shader_manager.cpp  shape_renderer.cpp  text_renderer.cpp  tree_view.cpp  window.cpp
test/: CMakeLists.txt
test/scene_graph/: circle_test.cpp  node_test.cpp  rectangle_test.cpp  shape_test.cpp  transform_test.cpp  types_test.cpp
test/visualization/: canvas_test.cpp  renderer_test.cpp  shader_test.cpp  window_test.cpp
